--- a/index.html
+++ b/index.html
@@ -1,100 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>UK Trekking Regions – Live Forecast & Suitability</title>
-<style>
-  body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background: #f8f9fa; margin: 0; padding: 1rem; color:#111;}
-  h1 { font-size: 1.6rem; margin: 0 0 .25rem 0; }
-  p.lead { margin: 0 0 1rem 0; color:#555; }
-  .grid { display: grid; gap: 1rem; grid-template-columns: repeat(auto-fit,minmax(320px,1fr)); }
-  .card { background: white; border-radius: 1rem; padding: 1rem; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-  .row { display:flex; align-items:center; gap:.5rem; flex-wrap:wrap; }
-  .rank { display:inline-flex; align-items:center; justify-content:center; width:28px; height:28px; border-radius:50%; background:#eef2ff; color:#3730a3; font-weight:600; font-size:.85rem; }
-  .badge { border-radius: 999px; padding: 0.2rem 0.6rem; font-size: 0.8rem; font-weight:600; }
-  .good { background:#dcfce7; color:#166534; }
-  .fair { background:#fef9c3; color:#854d0e; }
-  .risk { background:#fee2e2; color:#991b1b; }
-  .icons { display:grid; grid-template-columns: repeat(7,1fr); gap:6px; }
-  .day { border:1px solid #eee; border-radius:.75rem; padding:.5rem; text-align:center; }
-  .day .ico { font-size: 1.4rem; }
-  .muted { color:#666; }
-  .foot { margin-top:1rem; font-size:.8rem; color:#666; }
-  a { color:#2563eb; text-decoration:none; }
-  a:hover { text-decoration:underline; }
-/* --- toolbar + buttons --- */
-.toolbar { display:flex; gap:8px; flex-wrap:wrap; align-items:center; margin: .25rem 0 1rem; }
-.btn { display:inline-block; background:#1f2937; color:#fff; border:1px solid #e5e7eb; padding:8px 12px; border-radius:10px; text-decoration:none; cursor:pointer; }
-.btn:hover { background:#243042; }
-.btn:focus { outline: none; }  
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Hiking Regions – Live Weather Snapshot</title>
+  <style>
+    :root{
+      --bg:#0e1116;--panel:#151a23;--line:#242b38;--text:#e9edf3;--muted:#a9b3c3;
+      --good:#25c28a;--warn:#ffc24d;--bad:#ff6363;--accent:#46a3ff;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{margin:0;background:var(--bg);color:var(--text);font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
+    header{padding:16px 18px;border-bottom:1px solid var(--line)}
+    h1{margin:0 0 4px 0;font-size:20px}
+    .sub{color:var(--muted);font-size:13px}
+    .grid{display:grid;gap:16px;padding:16px;grid-template-columns:repeat(auto-fit,minmax(320px,1fr))}
+    .card{background:var(--panel);border:1px solid var(--line);border-radius:14px;padding:14px;box-shadow:0 1px 0 #0b0f16}
+    .row{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    .name{font-weight:700}
+    .pill{border:1px solid var(--line);border-radius:999px;padding:4px 10px;font-size:12px}
+    .good{color:var(--good);border-color:color-mix(in oklab,var(--good),#000 70%)}
+    .warn{color:var(--warn);border-color:color-mix(in oklab,var(--warn),#000 70%)}
+    .bad{color:var(--bad);border-color:color-mix(in oklab,var(--bad),#000 70%)}
+    .kpis{display:flex;flex-wrap:wrap;gap:8px;margin:10px 0 12px}
+    .k{border:1px solid var(--line);border-radius:10px;padding:8px 10px;min-width:120px}
+    .k b{display:block;font-size:16px}
+    .days{display:grid;gap:8px;grid-template-columns:repeat(6,1fr)}
+    .d{background:#0c1016;border:1px solid var(--line);border-radius:10px;padding:10px;display:flex;flex-direction:column;gap:8px}
+    .dt{font-size:12px;color:var(--muted)}
+    .wx{display:flex;align-items:center;gap:8px}
+    .ico{width:26px;height:26px;display:inline-block;filter:drop-shadow(0 0 2px #0008)}
+    .t{font-weight:600}
+    .tiny{font-size:12px;color:var(--muted)}
+    footer{padding:14px 16px;color:var(--muted);font-size:12px}
+    .spinner{width:16px;height:16px;border-radius:999px;border:2px solid var(--line);border-top-color:var(--accent);animation:spin .8s linear infinite}
+    @keyframes spin{to{transform:rotate(360deg)}}
+    .err{color:var(--bad);font-size:12px;margin-top:8px}
+    .src a{color:var(--accent);text-decoration:none}
+  </style>
 </head>
 <body>
-<h1>UK Trekking Regions – Live Forecast & Suitability</h1>
-<p class="lead">Live daily data from Open‑Meteo. Sorted Best → Least. Toggle refresh with your browser reload.</p>
-<div class="toolbar">
-  <a class="btn" href="./index_radar.html">Spider View</a>
-  <a class="btn" href="https://www.mwis.org.uk/" target="_blank" rel="noreferrer">MWIS Mountain Forecast</a>
-  <button class="btn" onclick="build()">Refresh</button>
-</div>  
-<div id="regions" class="grid"></div>
-<div class="foot">HikeScore is a heuristic combining precipitation, wind, and temperature comfort. Always check mountain‑specific forecasts (e.g., MWIS) and adapt for elevation.</div>
-<script>
-const REGIONS=[
- {id:'south_downs',name:'South Downs & Chilterns',lat:50.892,lon:-0.242,note:'Mild, rolling chalk downs; wind exposure on ridges.'},
- {id:'yorkshire_dales',name:'Yorkshire Dales',lat:54.21,lon:-2.3,note:'Upland moors and limestone; windchill common.'},
- {id:'peak_district',name:'Peak District',lat:53.36,lon:-1.83,note:'Gritstone edges and moorland; fast‑changing weather.'},
- {id:'brecon_beacons',name:'Brecon Beacons (Bannau Brycheiniog)',lat:51.885,lon:-3.436,note:'Rounded summits; mist forms quickly on tops.'},
- {id:'dartmoor_exmoor',name:'Dartmoor & Exmoor',lat:50.57,lon:-3.94,note:'Boggy in places; visibility can drop fast in mist.'},
- {id:'lake_district',name:'Lake District',lat:54.46,lon:-3.09,note:'Steep, rocky routes; rainfall and wind amplify risk.'},
- {id:'snowdonia',name:'Snowdonia (Eryri)',lat:53.07,lon:-4.04,note:'Rugged peaks and ridges; frequent summit cloud.'},
- {id:'scottish_highlands',name:'Scottish Highlands',lat:56.82,lon:-5.11,note:'Very exposed; rapid shifts, colder at elevation.'}
-];
-const DAYS=7;
-function icon(code){ if([0].includes(code))return'☀️'; if([1,2,3].includes(code))return'⛅'; if([45,48].includes(code))return'🌫️';
-  if([51,53,55,56,57].includes(code))return'🌦️'; if([61,63,65,66,67,80,81,82].includes(code))return'🌧️';
-  if([71,73,75,77,85,86].includes(code))return'❄️'; if([95,96,99].includes(code))return'⛈️'; return'🌤️'; }
-function score(d){ let s=100; s-=Math.min(d.precip*6,45); s-=Math.max(0,d.wind-15)*1.2; const mid=(d.tmax+d.tmin)/2; s-=Math.max(0,Math.abs(mid-13)-5)*1.5; return Math.max(0,Math.min(100,Math.round(s))); }
-function band(s){ if(s>=75) return ['Very good','good']; if(s>=60) return ['Good','good']; if(s>=45) return ['Fair','fair']; if(s>=30) return ['Challenging','fair']; return ['High risk','risk']; }
-async function getData(lat,lon){
-  const url=`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&daily=temperature_2m_max,temperature_2m_min,precipitation_sum,wind_speed_10m_max,weathercode&forecast_days=${DAYS}&timezone=auto`;
-  const r=await fetch(url); const j=await r.json();
-  return j.daily.time.map((t,i)=>({date:t,tmax:j.daily.temperature_2m_max[i],tmin:j.daily.temperature_2m_min[i],precip:j.daily.precipitation_sum[i],wind:j.daily.wind_speed_10m_max[i],code:j.daily.weathercode[i]}));
-}
-async function build(){
-  const cont=document.getElementById('regions'); cont.innerHTML='<p class="muted">Loading…</p>';
-  const rows=[];
-  for(const r of REGIONS){
-    try{ const days=await getData(r.lat,r.lon); const avg=days.map(score).reduce((a,b)=>a+b,0)/days.length; rows.push({...r,days,avg}); }
-    catch(e){ console.error(e); }
-  }
-  rows.sort((a,b)=>b.avg-a.avg); cont.innerHTML='';
-  rows.forEach((r,i)=>{
-    const [label, cls] = band(r.avg);
-    const card=document.createElement('div'); card.className='card';
-    const iconStrip=r.days.map(d=>`<div class="day"><div class="ico">${icon(d.code)}</div><div class="muted" style="font-size:.75rem">${new Date(d.date).toLocaleDateString('en-GB',{weekday:'short'})}</div><div style="font-weight:600">${Math.round(d.tmax)}° / ${Math.round(d.tmin)}°</div><div class="muted" style="font-size:.75rem">${d.precip.toFixed(1)} mm · ${Math.round(d.wind)} km/h</div></div>`).join('');
-    card.innerHTML=`
-      <div class="row" style="margin-bottom:.5rem">
-        <div class="rank">${i+1}</div>
-        <h3 style="margin:0; font-size:1.05rem">${r.name}</h3>
-      </div>
-      <div class="row" style="gap:.5rem; margin:.25rem 0 .75rem 0">
-        <span class="badge ${cls}">${label}</span>
-        <span class="muted">Avg HikeScore: ${Math.round(r.avg)}</span>
-        <span class="muted">(${r.lat.toFixed(2)}, ${r.lon.toFixed(2)})</span>
-      </div>
-      <div class="icons">${iconStrip}</div>
-      <div class="muted" style="margin-top:.5rem; font-size:.85rem">${r.note}</div>
-      <div class="row" style="gap:.75rem; margin-top:.5rem">
-        <a href="https://www.open-meteo.com/" target="_blank" rel="noreferrer">Source</a>
-        <a href="https://www.google.com/maps/search/?api=1&query=${r.lat},${r.lon}" target="_blank" rel="noreferrer">Map</a>
-      </div>
-    `;
-    cont.appendChild(card);
-  });
-}
-build();
-</script>
+  <!-- HOW TO USE
+    1) Edit the regions list below (name/lat/lon) to your usual areas.
+    2) Save as index.html in a GitHub repo. In the repo: Settings → Pages → Deploy from main branch.
+    3) Open the GitHub Pages URL for a one‑page dashboard. Data: Open‑Meteo (no key required).
+  -->
+  <header>
+    <h1>Hiking Regions – Live Weather Snapshot</h1>
+    <div class="sub">Dark, high‑contrast icons. Score = quick suitability heuristic for next 24h.</div>
+  </header>
+
+  <section class="grid" id="cards"></section>
+
+  <footer>
+    <span class="src">Data from <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open‑Meteo</a>. Icons are inline SVG for clarity at small sizes. Tweak thresholds in <code>scoreSuitability()</code>.</span>
+  </footer>
+
+  <script>
+    // 1) YOUR REGIONS
+    const regions = [
+      { name: "South Downs & Chilterns", lat: 51.0, lon: -0.9 },
+      { name: "Lake District (Keswick)", lat: 54.6039, lon: -3.1347 },
+      { name: "Snowdonia (Llanberis)", lat: 53.118, lon: -4.127 },
+      { name: "Peak District (Edale)", lat: 53.364, lon: -1.816 },
+      { name: "Yorkshire Dales (Settle)", lat: 54.068, lon: -2.278 },
+      { name: "Brecon Beacons (Storey Arms)", lat: 51.885, lon: -3.471 }
+    ];
+
+    // 2) Minimal inline icon set (SVG strings) with high contrast
+    const I = {
+      sun: '<svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
+      cloud: '<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
+      rain: '<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><path d="M7 16l-1 3m5-3l-1 3m5-3l-1 3" stroke="#7cc7ff" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
+      drizzle: '<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><path d="M7 16l-.6 1.5m4.6-1.5l-.6 1.5m4.6-1.5l-.6 1.5" stroke="#9fd3ff" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
+      storm: '<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M10 16l-2 5 5-3-2 5" stroke="#ffd54a" stroke-width="1.8" fill="none" stroke-linejoin="round"/></svg>',
+      snow: '<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95" fill="#bde0ff"><circle cx="7" cy="17" r="1.2"/><circle cx="12" cy="17" r="1.2"/><circle cx="17" cy="17" r="1.2"/></g></svg>',
+      fog: '<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><rect x="5" y="16" width="14" height="1.8" rx="0.9"/><rect x="4" y="19" width="12" height="1.8" rx="0.9"/></g></svg>'
+    };
+
+    // Map Open‑Meteo weathercode → icon key
+    function codeToIcon(code){
+      if([0].includes(code)) return I.sun; // clear
+      if([1,2,3].includes(code)) return I.cloud; // mainly/partly cloudy
+      if([45,48].includes(code)) return I.fog; // fog
+      if([51,53,55,56,57].includes(code)) return I.drizzle; // drizzle
+      if([61,63,65,66,67,80,81,82].includes(code)) return I.rain; // rain
+      if([71,73,75,77,85,86].includes(code)) return I.snow; // snow
+      if([95,96,99].includes(code)) return I.storm; // thunder
+      return I.cloud;
+    }
+
+    // Suitability heuristic for the next 24h
+    function scoreSuitability({ wind, precip, tmax, tmin, cloud }){
+      let s = 100;
+      if (wind > 30) s -= (wind - 30) * 1.1;            // mph-ish equivalent from km/h cap
+      if (precip > 2) s -= (precip - 2) * 10;           // mm
+      if (tmax < 2 || tmin < -2) s -= 15;
+      if (tmax > 24) s -= (tmax - 24) * 1.5;
+      if (cloud > 90) s -= 5;
+      s = Math.max(0, Math.min(100, Math.round(s)));
+      const label = s >= 75 ? 'Very good' : s >= 55 ? 'Good' : s >= 40 ? 'Fair' : 'High risk';
+      const cls = s >= 75 ? 'good' : s >= 55 ? 'good' : s >= 40 ? 'warn' : 'bad';
+      return { s, label, cls };
+    }
+
+    const cardsEl = document.getElementById('cards');
+
+    function el(tag, cls, txt){const e=document.createElement(tag); if(cls) e.className=cls; if(txt) e.textContent=txt; return e;}
+
+    async function fetchRegion(r){
+      const url = new URL('https://api.open-meteo.com/v1/forecast');
+      url.search = new URLSearchParams({
+        latitude: r.lat, longitude: r.lon,
+        timezone: 'auto',
+        daily: 'weather_code,temperature_2m_max,temperature_2m_min,precipitation_sum,wind_speed_10m_max',
+        forecast_days: 6
+      }).toString();
+      const res = await fetch(url);
+      if(!res.ok) throw new Error('HTTP '+res.status);
+      return res.json();
+    }
+
+    function renderRegion(r){
+      const card = el('div','card');
+      const top = el('div','row');
+      top.append(el('div','name',r.name), el('div','spinner'));
+      card.append(top);
+
+      const kpis = el('div','kpis');
+      card.append(kpis);
+
+      const days = el('div','days');
+      card.append(days);
+
+      cardsEl.append(card);
+
+      fetchRegion(r).then(data=>{
+        const d = data.daily;
+        // Next‑24h summary from first day
+        const tmax = d.temperature_2m_max[0];
+        const tmin = d.temperature_2m_min[0];
+        const precip = d.precipitation_sum[0];
+        const wind = d.wind_speed_10m_max[0];
+        const code = d.weather_code[0];
+        const cloudProxy = [45,48].includes(code) ? 95 : ([0].includes(code) ? 15 : 60);
+        const { s, label, cls } = scoreSuitability({ wind, precip, tmax, tmin, cloud: cloudProxy });
+
+        kpis.innerHTML = '';
+        const k1 = el('div','k'); k1.innerHTML = `<span class="tiny">Suitability</span><b>${label} (${s})</b>`; kpis.append(k1);
+        const k2 = el('div','k'); k2.innerHTML = `<span class="tiny">Temp (max/min)</span><b>${tmax.toFixed(0)}° / ${tmin.toFixed(0)}°</b>`; kpis.append(k2);
+        const k3 = el('div','k'); k3.innerHTML = `<span class="tiny">Wind (max)</span><b>${Math.round(wind)} km/h</b>`; kpis.append(k3);
+        const k4 = el('div','k'); k4.innerHTML = `<span class="tiny">Rain (sum)</span><b>${precip.toFixed(1)} mm</b>`; kpis.append(k4);
+
+        // style pill
+        const pill = el('span',`pill ${cls}`,label); top.replaceChild(pill, top.lastChild);
+
+        // 6‑day strip with high‑contrast icons
+        const opts = {weekday:'short'};
+        days.innerHTML = '';
+        for(let i=0;i<d.time.length;i++){
+          const cell = el('div','d');
+          const dt = new Date(d.time[i]);
+          cell.append(el('div','dt',dt.toLocaleDateString(undefined,opts)));
+          const wx = el('div','wx');
+          const ic = el('span'); ic.innerHTML = codeToIcon(d.weather_code[i]);
+          wx.append(ic, el('div','t',`${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
+          cell.append(wx);
+          const tiny = el('div','tiny',`${d.precipitation_sum[i].toFixed(1)} mm · ${Math.round(d.wind_speed_10m_max[i])} km/h`);
+          cell.append(tiny);
+          days.append(cell);
+        }
+      }).catch(err=>{
+        top.replaceChild(el('div','err','Error loading data'), top.lastChild);
+        console.error(r.name, err);
+      });
+    }
+
+    regions.forEach(renderRegion);
+  </script>
 </body>
 </html>
