--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
       --warn:#ffc24d;--bad:#ff6363;--accent:#46a3ff;
     }
     *{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:var(--text);
-      font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
+    body{
+      margin:0;background:var(--bg);color:var(--text);
+      font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial;
+    }
     header{padding:16px 18px;border-bottom:1px solid var(--line)}
     h1{margin:0 0 4px 0;font-size:20px}
     .sub{color:var(--muted);font-size:13px}
+
+    /* 2-column grid */
     .grid{
-      display:grid;gap:16px;padding:16px;
-      grid-template-columns:repeat(auto-fill,minmax(380px,1fr));
+      display:grid;
+      gap:20px;
+      padding:16px;
+      grid-template-columns:repeat(2, minmax(420px, 1fr));
+      justify-content:center;
       align-items:start;
+      max-width:1400px;
+      margin:0 auto;
     }
+    @media (max-width:980px){
+      .grid{grid-template-columns:1fr;}
+    }
+
     .card{
       background:var(--panel);border:1px solid var(--line);
       border-radius:14px;padding:14px;box-shadow:0 1px 0 #0b0f16;
@@ -32,14 +45,29 @@
     .good{color:var(--good);border-color:color-mix(in oklab,var(--good),#000 70%)}
     .warn{color:var(--warn);border-color:color-mix(in oklab,var(--warn),#000 70%)}
     .bad{color:var(--bad);border-color:color-mix(in oklab,var(--bad),#000 70%)}
-    .kpis{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:10px;margin:10px 0 12px;min-height:100px}
+
+    .kpis{
+      display:grid;
+      grid-template-columns:repeat(2,minmax(0,1fr));
+      gap:10px;
+      margin:10px 0 12px;
+      min-height:100px;
+    }
     .k{border:1px solid var(--line);border-radius:10px;padding:8px 10px}
     .k b{display:block;font-size:16px}
-    .days{margin-top:auto;display:grid;gap:8px;
-      grid-template-columns:repeat(6,1fr);min-height:132px;}
-    .d{background:#0c1016;border:1px solid var(--line);
+
+    .days{
+      margin-top:auto;
+      display:grid;
+      gap:8px;
+      grid-template-columns:repeat(6,1fr);
+      min-height:132px;
+    }
+    .d{
+      background:#0c1016;border:1px solid var(--line);
       border-radius:10px;padding:10px;display:flex;
-      flex-direction:column;justify-content:space-between;min-height:120px;}
+      flex-direction:column;justify-content:space-between;min-height:120px;
+    }
     .dt{font-size:12px;color:var(--muted)}
     .wx{display:flex;align-items:center;gap:8px}
     .ico{width:26px;height:26px;display:inline-block;filter:drop-shadow(0 0 2px #0008)}
@@ -76,7 +104,6 @@ const regions = [
   { name:"Forest of Bowland (Lancashire)", lat:53.993, lon:-2.573 }
 ];
 
-// simple inline SVG icon set
 const I={
   sun:'<svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
   cloud:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
@@ -138,11 +165,8 @@ async function buildAll(){
       const cloudProxy=[45,48].includes(code)?95:([0].includes(code)?15:60);
       const sc=scoreSuitability({wind,precip,tmax,tmin,cloud:cloudProxy});
       results.push({...r,data,score:sc});
-    }catch(e){
-      console.error(r.name,e);
-    }
+    }catch(e){console.error(r.name,e);}
   }
-  // sort best→worst
   results.sort((a,b)=>b.score.s-a.score.s);
   results.forEach(renderRegion);
 }
