--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>UK Trekking Dashboard – Live Weather (Top 12)</title>
+<title>UK Trekking Dashboard – Live Weather </title>
 <style>
   :root{
     --bg:#0e1116;--panel:#151a23;--line:#242b38;
