--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
 <header>
-  <h1>UK Trekking Dashboard – Live Weather (Top 12)</h1>
+  <h1>UK Trekking Dashboard – Live Weather</h1>
   <div class="sub">Sorted by suitability · Per-day coloured icons · Open-Meteo data</div>
 </header>
 
